Fix timer vertical alignment

--- a/assets/css/module/timer.css
+++ b/assets/css/module/timer.css
@@ -27,6 +27,7 @@
 }
 @media (min-width: 768px) {
 	.timer__wrapper {
+		align-items: center;
 		display: flex;
 		justify-content: center;
 	}
